Bug#44394      Assertion Failure   the problem is in the TIMESTAMP(14) fields of the access-control tables.   The TIMESTAMP(14) syntax is marked as DEPRECATED since 5.2.   Fixed by just changed the check to 6.0 as it's done in the 5.1 branch.

per-file comments:
  sql/sql_parse.cc
Bug#44394      Assertion Failure
    now it's deprecated since 6.0